# startup-configuration

./: .gitignore  Cargo.toml  README.md  best.ellie.StartupConfiguration.json  justfile
i18n/en/: cosmic_startup.ftl  startup_configuration.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  apps.rs  config.rs  i18n.rs  main.rs  programs.rs
